--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="address-bar">Keystone | Ucab | Itogon</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -86,9 +86,9 @@
                     <img class="img-responsive img-border img-full" src="img/slide-1.jpg" alt="">
                     <h2>Post Title
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>November 2016</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
